--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,40 +1,88 @@
-Django==4.2.2
-djangorestframework==3.14.0
-djoser==2.2.0
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-drf-yasg==1.21.4
-django-rest-passwordreset==1.3.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
+beautifulsoup4==4.12.3
+boto3==1.26.165
+botocore==1.29.165
 Brotli==1.0.9
+cachetools==5.3.3
 certifi==2023.5.7
+cffi==1.16.0
 charset-normalizer==3.1.0
+click==8.1.7
 colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==42.0.5
+cyrtranslit==1.1.1
+deep-translator==1.11.4
+defusedxml==0.8.0rc2
 discum==1.4.1
+Django==4.2.2
+django-cors-headers==4.1.0
+django-debug-toolbar==4.3.0
+django-nested-admin==4.0.2
+django-rest-passwordreset==1.3.0
+django-ses==3.5.0
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.0
+drf-yasg==1.21.4
 filetype==1.2.0
 frozenlist==1.3.3
+google-api-core==2.18.0
+google-api-python-client==2.124.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
+httplib2==0.22.0
 idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.3
+jmespath==1.0.1
+joblib==1.3.2
+MarkupSafe==2.1.5
+mixpanel==4.10.0
 multidict==6.0.4
+nltk==3.8.1
+oauthlib==3.2.2
 openai==0.27.8
+packaging==23.2
+Pillow==10.1.0
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.21
+PyJWT==2.8.0
+pyparsing==3.1.2
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+python-monkey-business==1.0.0
+python3-openid==3.2.0
+pytz==2024.1
+regex==2023.12.25
 requests==2.31.0
+requests-oauthlib==1.3.1
 requests-toolbelt==1.0.0
+rsa==4.9
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+s3transfer==0.6.2
 six==1.16.0
+social-auth-app-django==5.4.0
+social-auth-core==4.5.3
+soupsieve==2.5
+sqlparse==0.4.4
 tqdm==4.65.0
+typing_extensions==4.10.0
 ua-parser==0.16.1
+uritemplate==4.1.1
 urllib3==1.26.16
 websocket-client==0.59.0
 yarl==1.9.2
-django_cors_headers==4.1.0
-boto3==1.26.165
-botocore==1.29.165
-mixpanel==4.10.0
-deep-translator
-cyrtranslit
-django-nested-admin
-django-debug-toolbar
-nltk
-django-ses==3.5.0
-Pillow==10.1.0
